Fixed nearby inspector overlaping with active component

--- a/core/page/css/layout/buttons.less
+++ b/core/page/css/layout/buttons.less
@@ -70,7 +70,9 @@
 		min-width: 1em;
 		opacity: 1;
 		user-select: none;
+		vertical-align: middle;
 		width: 1em;
+
 		// height: fit-content;
 		// margin-top: 0.25rem;
 		// margin-left: 0.5em;
